# turboquant-llama3.170B

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
assets/: generate_charts.py
engine/: chat_engine.cpp  chat_mlx.py  chat_repl.py  llama_loader.cpp  llama_loader.h  llama_model.cpp  llama_model.h  polarquant.cpp  polarquant.h  polarquant.metal  qjl.cpp  qjl.h  sdpa_int4.cpp  sdpa_int4.h  sdpa_int4.metal  sdpa_polar.cpp  sdpa_polar.h  sdpa_polar.metal  sdpa_qjl.cpp  sdpa_qjl.h  sdpa_qjl.metal
meta/hardware/: orchestrator-alpha
tests/: chunk_size_bench.cpp  context_scaling.cpp  decode_profile.cpp  kv_memory_test.cpp  llama_e2e.cpp  polarquant_validate.cpp  qjl_real_activations.cpp  qjl_validate.cpp  qmatmul_bench.cpp  sdpa_int4_bench.cpp  sdpa_polar_bench.cpp  sdpa_qjl_bench.cpp
